big push towards full cell integration

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,11 @@
 set(HEADERS
     swcio.hpp
-    )
+)
 set(BASE_SOURCES
+    cell.cpp
+    mechanism_interface.cpp
     parameter_list.cpp
     swcio.cpp
-    cell.cpp
 )
 
 add_library(cellalgo ${BASE_SOURCES} ${HEADERS})
