Added support for synapses
This is a big and unweildy update (the last one, we promise).
- added synapses
    - update to a version of modparser that generates net_receive and
      point process currents
    - added event_queue type for queueing events in a cell
    - added advance_to() method to FVM cell that supports event delivery
    - added synapse storage and modification to cell and fvm_cell types
    - added unit tests and NEURON validation test
- include support for const_views
    - moved to more recent bcumming/vector library with support for
      const_views
    - added const-safe const_view interace to fvm_cell and matrix types

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -16,6 +16,7 @@ set(TEST_SOURCES
     test_algorithms.cpp
     test_cell.cpp
     test_compartments.cpp
+    test_event_queue.cpp
     test_fvm.cpp
     test_matrix.cpp
     test_mechanisms.cpp
@@ -24,6 +25,7 @@ set(TEST_SOURCES
     test_segment.cpp
     test_stimulus.cpp
     test_swcio.cpp
+    test_synapses.cpp
     test_tree.cpp
 
     # unit test driver
@@ -32,8 +34,9 @@ set(TEST_SOURCES
 
 set(VALIDATION_SOURCES
     # unit tests
-    validate_soma.cpp
     validate_ball_and_stick.cpp
+    validate_soma.cpp
+    validate_synapses.cpp
 
     # unit test driver
     validate.cpp
