MPI through CMake
* Add WITH_MPI CMake option to enable MPI code in application
* Use find_package(MPI) and set up flags, etc. for MPI
* Extra defines to disable the inclusion of C++ MPI headers for
  MPICH and OpenMPI.
* Fix signed/unsigned compare warning in algorithms.hpp

--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -11,6 +11,11 @@ add_executable(miniapp.exe ${MINIAPP_SOURCES} ${HEADERS})
 target_link_libraries(miniapp.exe LINK_PUBLIC cellalgo)
 target_link_libraries(miniapp.exe LINK_PUBLIC ${TBB_LIBRARIES})
 
+if(WITH_MPI)
+    target_link_libraries(miniapp.exe LINK_PUBLIC ${MPI_C_LIBRARIES})
+    set_property(TARGET miniapp.exe APPEND_STRING PROPERTY LINK_FLAGS "${MPI_C_LINK_FLAGS}")
+endif()
+
 set_target_properties(miniapp.exe
    PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/miniapp"
