--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,9 @@ set(BASE_SOURCES
     parameter_list.cpp
     swcio.cpp
 )
+if(${WITH_MPI})
+    set(BASE_SOURCES ${BASE_SOURCES} communication/mpi.cpp)
+endif()
 
 add_library(cellalgo ${BASE_SOURCES} ${HEADERS})
 add_dependencies(cellalgo build_all_mods)
