--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,10 @@ set(BASE_SOURCES
     cell.cpp
     mechanism_interface.cpp
     parameter_list.cpp
+    profiling/profiler.cpp
     swcio.cpp
 )
+
 if(${WITH_MPI})
     set(BASE_SOURCES ${BASE_SOURCES} communication/mpi.cpp)
 endif()
