improved spike chain generation in minapp
* add header only library TCLAP for parsing command line arguments
    - added as git submodule
    - update CMakeLists to include headers
* remove the ring model from miniapp
* add support for user supplied parameters for miniapp
    - arguments for cell counts etc can be command line flags
    - or in a user-defined json input file
* the all-to-all model supports synapses-per-cell is less than
  the total number of cells
    - in this case a random set of sources is selected

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "modparser"]
 	path = external/modparser
 	url = git@github.com:eth-cscs/modparser.git
+[submodule "external/tclap"]
+	path = external/tclap
+	url = https://github.com/eile/tclap.git
