Add basic debugging trace capability.
Defines a TRACE(...) macro that, when enabled at
compile time with -DWITH_TRACE, prints to std::cerr
the location in the source, a time stamp, and the
values of any variables given to the macro.

Uses a mutex to protect against simultaneous writes
to std::cerr when TBB is enabled; it is not
optimized for speed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,12 @@ if(WITH_ASSERTIONS)
     add_definitions("-DWITH_ASSERTIONS")
 endif()
 
+# enable traces?
+set(WITH_TRACE OFF CACHE BOOL "enable TRACE() macros in code")
+if(WITH_TRACE)
+    add_definitions("-DWITH_TRACE")
+endif()
+
 # TBB support
 set(WITH_TBB OFF CACHE BOOL "use TBB for on-node threading" )
 if(WITH_TBB)
