rename util.hpp to test_unit.hpp and move to top test directory Adapt sources to include test_unit.hpp Add empty CMakeLists.txt to all test type directories

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,19 +1,19 @@
 # Large test, employing the full simulator. 
 # validated using deltas on output data
-#add_subdirectory(delta)
+add_subdirectory(delta)
 
 # Test for the internode communication (eg. mpi)
-#add_subdirectory(global_communication)
+add_subdirectory(global_communication)
 
 # Test to check integration between components of the site_name
-#add_subdirectory(integration)
+add_subdirectory(integration)
 
 # Check for performance: This could include stand alone tests
 # These do not necessarily be run automatically
-#add_subdirectory(performance)
+add_subdirectory(performance)
 
 # Numbered tests based on bugs in the tracker
-#add_subdirectory(regression)
+add_subdirectory(regression)
 
 # google test framework
 add_library(gtest gtest-all.cpp)
