--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -4,6 +4,7 @@ set(MINIAPP_SOURCES
     #    mpi.cpp
     io.cpp
     miniapp.cpp
+    recipes.cpp
 )
 
 add_executable(miniapp.exe ${MINIAPP_SOURCES} ${HEADERS})
