WIP - does not compile
* splitting out model abstraction from miniapp
* move to (gid,index) ids for sources, targets
* simplify lid/gid mappings for communicator, cell group etc.

--- a/miniapp/CMakeLists.txt
+++ b/miniapp/CMakeLists.txt
@@ -3,8 +3,9 @@ set(HEADERS
 set(MINIAPP_SOURCES
     #    mpi.cpp
     io.cpp
-    miniapp.cpp
+#    miniapp.cpp
     recipes.cpp
+    model.cpp
 )
 
 add_executable(miniapp.exe ${MINIAPP_SOURCES} ${HEADERS})
