Rename catypes.hpp, clarify cell_member_type use.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ set(HEADERS
     swcio.hpp
 )
 set(BASE_SOURCES
-    catypes_io.cpp
+    common_types_io.cpp
     cell.cpp
     parameter_list.cpp
     profiling/profiler.cpp
