Unit tests for fvm_multicell.
* Consolidate basic cell models used in unit and validation tests.
* Test `fvm_multicell` with same tests as `fvm_cell`, plus
  some index tests for the multiple cell case.

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -18,6 +18,7 @@ set(TEST_SOURCES
     test_either.cpp
     test_event_queue.cpp
     test_fvm.cpp
+    test_fvm_multi.cpp
     test_cell_group.cpp
     test_lexcmp.cpp
     test_mask_stream.cpp
