Finalize fvm_multicell
* Fix bug in 'close' event delivery for multicell.
* Fix displacement scaling bug in gather_all_with_partition.
* Command line parameter io, reporting for new miniapp options.
* Only master rank performs command line parameter writing.
* Add test for mpi::gather_all and mpi::gather_all_with_partition.
* Extend utility of `util::assign`, `util::append`.

--- a/tests/global_communication/CMakeLists.txt
+++ b/tests/global_communication/CMakeLists.txt
@@ -4,6 +4,7 @@ set(HEADERS
 set(COMMUNICATION_SOURCES
     test_exporter_spike_file.cpp
     test_communicator.cpp
+    test_mpi_gather_all.cpp
 
     # unit test driver
     test.cpp
